Chinh sua header va luu ket qua phan header

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
-
     <div id="container">
+        <!-- Header -->
         <div id="header">
+            <!-- Phan ben trai -->
             <div class="header--left">
                 <div class="left--logo">
                     <img src="./img/logo.png" alt="">
@@ -26,6 +27,7 @@
                     <li>Support</li>
                 </ul>
             </div>
+            <!-- Phan ben phai -->
             <div class="header--right">
                 <div class="right--search">
                     <i class="fa-solid fa-magnifying-glass"></i>
@@ -38,7 +40,9 @@
                 </div>
             </div>
         </div>
-        <div id="container"></div>
+        <!-- Phan content -->
+        <div id="content"></div>
+        <!-- Phan footer -->
         <div id="footer"></div>
     </div>
     <img src="./img/a_detail.png" alt="">
