--- a/index.html
+++ b/index.html
@@ -43,7 +43,24 @@
         <!-- Phan content -->
         <div id="content"></div>
         <!-- Phan footer -->
-        <div id="footer"></div>
+        <div id="footer">
+            <!-- Phan logo -->
+            <div class="footer--logo">
+                <img class="logo" src="./img/logo.png" alt="">
+            </div>
+            <!-- Phan chu Subscribe to our newsletter -->
+            <div class="subscribe">
+                <p class="text">Subscribe to our newsletter</p>
+            </div>
+            <!-- Phan email -->
+            <!-- <div class="email">
+                <i class="fa-regular fa-envelope"></i>
+                <input class="txtEmail" type="text" placeholder="Input your email">
+                <button>Subscribe</button>
+            </div> -->
+            <div class=""></div>
+            <div class=""></div>
+        </div>
     </div>
     <img src="./img/a_detail.png" alt="">
 </body>
