Hoan thanh footer

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </div>
         <!-- Phan content -->
         <div id="content"></div>
+
         <!-- Phan footer -->
         <div id="footer">
             <!-- Phan logo -->
@@ -49,17 +50,51 @@
                 <img class="logo" src="./img/logo.png" alt="">
             </div>
             <!-- Phan chu Subscribe to our newsletter -->
-            <div class="subscribe">
+            <div class="footer--subscribe">
                 <p class="text">Subscribe to our newsletter</p>
             </div>
             <!-- Phan email -->
-            <!-- <div class="email">
-                <i class="fa-regular fa-envelope"></i>
-                <input class="txtEmail" type="text" placeholder="Input your email">
-                <button>Subscribe</button>
-            </div> -->
-            <div class=""></div>
-            <div class=""></div>
+            <div class="footer--email">
+                <div class="footer--email--mail">
+                    <i class="fa-regular fa-envelope"></i>
+                    <input class="txtEmail" type="text" placeholder="Input your email">
+                </div>
+                <button class="btSub">Subscribe</button>
+            </div>
+            <div class="footer--menu">
+                <ul class="menu">
+                    <li class="menu--title">Product</li>
+                    <li class="menu--list">Features</li>
+                    <li class="menu--list">Pricing</li>
+                </ul>
+                <ul class="menu">
+                    <li class="menu--title">Resources</li>
+                    <li class="menu--list">Blog</li>
+                    <li class="menu--list">User guides</li>
+                    <li class="menu--list">Webinars</li>
+                </ul>
+                <ul class="menu">
+                    <li class="menu--title">Company</li>
+                    <li class="menu--list">About us</li>
+                    <li class="menu--list">Contact us</li>
+                </ul>
+                <ul class="menu">
+                    <li class="menu--title">Plans & Pricing</li>
+                    <li class="menu--list">Personal</li>
+                    <li class="menu--list">Start up</li>
+                    <li class="menu--list">Organdization</li>
+                </ul>
+            </div>
+            <div class="footer--contact">
+                    <select class="contact--english"><option value="">English</option></select>
+                    <p class="contact--text">© 2022 Brand. Inc • Privacy • Terms • Sitemap</p>
+                    <div class="contact--picture">
+                        <img src="./img/Twitter 9.png" alt="">
+                        <img src="./img/Facebook 9.png" alt="">
+                        <img src="./img/LinkedIn 8.png" alt="">
+                        <img src="./img/YouTube 8.png" alt="">
+                    </div>
+            </div>
         </div>
     </div>
     <img src="./img/a_detail.png" alt="">
