Lam phan content_top lan 1

--- a/index.html
+++ b/index.html
@@ -41,7 +41,101 @@
             </div>
         </div>
         <!-- Phan content -->
-        <div id="content"></div>
+        <div id="content">
+            <div class="content--top">
+                <div class="top1">
+                    <div class="top--menu">
+                        <ul class="menu--content">
+                            <li>Home /</li>
+                            <li> Category /</li>
+                            <li> Product title</li>
+                        </ul>
+                    </div>
+                    <p class="text--pro">Product title</p>
+                    <div class="top--rating">
+                        <div class="rating--left">
+                            <img src="./img/Rating 303.png" alt="">
+                            <p class="text_42D">4.2D</p>
+                            <p class="text_99_reviews">(99 reviews)</p>
+                        </div>
+                        <div class="rating--right">
+                            <div class="right1">
+                                <img src="./img/share.jpg" alt="" class="img_share">
+                                <p>Share</p>
+                            </div>
+                            <div class="right2">
+                                <img src="./img/Heart 23.png" alt="">
+                                <p>Save</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="top2">
+                    <img src="./img/Image1.png" alt="" class="img1">
+                        <div class="img24">
+                            <img src="./img/Image2.png" alt="" class="img2">
+                            <img src="./img/Image4.png" alt="" class="img4">
+                        </div>
+                        <div class="img35">
+                            <img src="./img/Image3.png" alt="" class="img3">
+                            <img src="./img/Image5.png" alt="" class="img5">
+                        </div>
+                </div>
+                <div class="top3">
+                    <div class="top3_left">
+                        <div class="left_text">
+                            <p class="text1">Product description</p>
+                            <p class="text2">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem lorem aliquam sed lacinia quis. 
+                                Nibh dictumst vulputate odio pellentesque sit quis ac, sit ipsum. Sit rhoncus velit in sed massa arcu sit eu. 
+                                Vitae et vitae eget lorem non dui. Sollicitudin ut mi adipiscing duis. <br>
+                                Convallis in semper laoreet nibh leo. Vivamus malesuada ipsum pulvinar non rutrum risus dui, risus. 
+                                Purus massa velit iaculis tincidunt tortor, risus, scelerisque risus. In at lorem pellentesque orci aenean dictum dignissim in. 
+                                Aenean pulvinar diam interdum ullamcorper. Vel urna, tortor, massa metus purus metus. Maecenas mollis in velit auctor cursus scelerisque eget.
+                            </p>
+                        </div>
+                        <div class="left_element">
+                            <div class="element_1">
+                                <img src="./img/Truck 1.png" alt="" class="elemet_img">
+                                <p class="text_free">Free delivery</p>
+                                <img src="./img/Arrow bend up left 1.png" alt="" class="elemet_img">
+                                <p class="text_7">7 days return</p>                
+
+                            </div>
+                            <div class="element_2">
+                                <img src="./img/Globe 1.png" alt="" class="elemet_img">
+                                <p class="text_made">Made in USA</p>
+                                <img src="./img/Medal 1.png" alt="" class="elemet_img">
+                                <p class="text_2">2 years guarantee</p>
+                            </div>
+                            <div class="element_3">
+                                <img src="./img/Chat dots 1.png" alt="" class="elemet_img">
+                                <p class="text_100">100% authentic</p>
+                                <img src="./img/Checks 1.png" alt="" class="elemet_img">
+                                <p class="text_24/7">24/7 customer support</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="top3_right">
+                        <p>$99</p>
+                        <select name="" id="" class="color"><option value="">Color</option></select>
+                        <select name="" id="" class="size"><option value="">Size</option></select>
+                        <select name="" id="" class="number"><option value="">3</option></select>
+                        <div>
+                            <p>Total</p>
+                            <p>$265</p>
+                        </div>
+                        <button class="buy_now">Buy now</button>
+                        <div>
+                            <img src="./img/Shopping cart simple 1.png" alt="">
+                            <button class="Add to cart">Add to cart</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="content--center"></div>
+            <div class="content--bot"></div>
+        </div>
 
         <!-- Phan footer -->
         <div id="footer">
@@ -86,18 +180,19 @@
                 </ul>
             </div>
             <div class="footer--contact">
-                    <select class="contact--english"><option value="">English</option></select>
-                    <p class="contact--text">© 2022 Brand. Inc • Privacy • Terms • Sitemap</p>
-                    <div class="contact--picture">
-                        <img src="./img/Twitter 9.png" alt="">
-                        <img src="./img/Facebook 9.png" alt="">
-                        <img src="./img/LinkedIn 8.png" alt="">
-                        <img src="./img/YouTube 8.png" alt="">
-                    </div>
+                <select class="contact--english"><option value="">English</option></select>
+                <p class="contact--text">© 2022 Brand. Inc • Privacy • Terms • Sitemap</p>
+                <div class="contact--picture">
+                    <img src="./img/Twitter 9.png" alt="">
+                    <img src="./img/Facebook 9.png" alt="">
+                    <img src="./img/LinkedIn 8.png" alt="">
+                    <img src="./img/YouTube 8.png" alt="">
+                </div>
             </div>
         </div>
     </div>
     <img src="./img/a_detail.png" alt="">
+    <img src="./img/Image1.png" alt="">
 </body>
 
 </html>
